VB-1276, stop service title disappearing on smaller screensize

--- a/assets/sass/components/_header-bar.scss
+++ b/assets/sass/components/_header-bar.scss
@@ -30,7 +30,6 @@
     }
 
     &__service-name {
-      display: none;
       @include govuk-font(24);
 
       @include govuk-media-query($from: desktop) {
